# Obstruction-faster

./: CMakeLists.txt  README.md  main.cpp
Board/: board.cpp  board.hpp
Exceptions/: exceptions.hpp
Game/: game.cpp  game.hpp
Obs/: CMakeLists.txt  main.cpp  obs.cpp  obs.h  obs.qrc  obs.ui  obstruction.cpp  obstruction.h
build-untitled-Desktop-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake  untitled
build-untitled-Desktop-Debug/.cmake/api/v1/reply/: cache-v2-dc996b020f63e72e1169.json  cmakeFiles-v1-5f03e4aef0eb092a0321.json  codemodel-v2-4f00f15537f80cbbea8e.json  index-2022-07-28T23-11-17-0565.json  target-untitled-Debug-b50525ad262dd284624f.json  target-untitled_autogen-Debug-ecb16173c5e3393bdfaf.json  target-untitled_autogen_timestamp_deps-Debug-3c49ba8f95f1aa20be9a.json
build-untitled-Desktop-Debug/.qtc_clangd/: compile_commands.json
build-untitled-Desktop-Debug/untitled_autogen/: deps  mocs_compilation.cpp
build-untitled-Desktop-Debug/untitled_autogen/EWIEGA46WW/: moc_obstruction.cpp  moc_obstruction.cpp.d
build-untitled-Desktop-Debug/untitled_autogen/include/: ui_obstruction.h
untitled/: CMakeLists.txt  main.cpp  obstruction.cpp  obstruction.h  obstruction.ui
